--- a/style/main.css
+++ b/style/main.css
@@ -42,7 +42,7 @@ header nav a:hover{
 /* jogo principal*/
 .jogo-principal{
     font-size: 16px;
-    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%), url('/img/zbotw_cover.png');
+    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%), url('../img/zbotw_cover.png');
 
     height: 400px;
     background-size:cover;
@@ -58,11 +58,11 @@ header nav a:hover{
     margin-bottom: 40px;
 }
 
-.game-principal.titulo{
-    margin-top: 15%;
+.titulo{
+
     font-size: 40px;
-    font-family: 'Trebuchet MS', Arial, sans-serif;
 }
+
 
 .botao{
     background-color: rgba(0,0,0,.50);
